=== master

* Support column aliases with data types on PostgreSQL, useful for selecting from functions returning records (jeremyevans)

* Break ties in timestamp migrator version handling using lexicographic sort of rest of migration filename (jeremyevans)

* Fix strict_unused_block warnings when running specs on Ruby 3.4 (jeremyevans)

=== 5.87.0 (2024-12-01)

* Add pg_schema_caching extension, for reloading OIDs for custom types when loading cached schema (jeremyevans)

* Make Database#schema hashes include :comment field on MySQL and PostgreSQL (Bahanix) (#2248, #2249)

* Add inspect_pk plugin to make it easier to retrieve model instance based on inspect output (jeremyevans)

* Treat all Trilogy errors with error code 1205 as Sequel::DatabaseLockTimeout in the trilogy adapter (jeremyevans)

* Allow Data{base,set}#extension to not require files if the extension is already registered (jeremyevans) (#2246)

* Do not limit imports to 40 rows at a time if using pg_auto_parameterize extension with the no_auto_parameterize method (davekaro) (#2242)

=== 5.86.0 (2024-11-01)

* Support the :disable_dqs Database option in the sqlite adapter to disable treating double quoted values as strings (jeremyevans) (#2233)

* Have the subset_conditions plugin support where_all and where_any methods to combine existing subsets with AND or OR (jeremyevans)

* Have the subset_conditions plugin add *_conditions methods for exclude method calls in addition to where and subset (jeremyevans)

* Use Ruby module naming instead of Java package naming for access to Java libraries in the jdbc adapters (kalenp) (#2235, #2236) 

* Make schema_dumper extension format options similar to Hash#inspect on Ruby 3.4+ (jeremyevans)

* Avoid deprecation warnings on Ruby 3.4.0-preview2 (jeremyevans)

* Handle FROM tables that are SQL::DelayedEvaluation instances when trying to get primary key values after INSERT on PostgreSQL (tomasmiguez) (#2230, #2232)

=== 5.85.0 (2024-10-01)
